--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -296,33 +296,6 @@
                                                             </tr>
                                                             {% endfor %}
                                                         </tbody>
-                                                        <!-- <tbody>
-                                                            {% for preschooler in archive_preschoolers %}
-                                                            <tr style="text-align: center;">
-                                                                <td></td>
-                                                                <td>{{ preschooler.first_name }}</td>
-                                                                <td>{{ preschooler.middle_name }}</td>
-                                                                <td>{{ preschooler.last_name }}</td>
-                                                                <td>{{ preschooler.suffix_name }}</td>
-                                                                <td>{{ preschooler.birthday }}</td>
-                                                                <td>{{ preschooler.age_months }}</td>
-                                                                {% if preschooler.bmifa is None %}
-                                                                
-                                                                    <td> No Data Record </td>
-                                                                {% elif preschooler.bmifa > 3.0%}
-                                                                    <td style="background-color: rgb(242, 98, 33);"> Obese ({{ preschooler.bmifa }})</td>
-                                                                {% elif preschooler.bmifa > 2.0 %}
-                                                                    <td style="background-color: rgb(242, 98, 33);"> Overweight ({{ preschooler.bmifa }})</td>
-                                                                {% elif preschooler.bmifa >= -2.0 and preschooler.bmifa <= 2.0 %}
-                                                                    <td style="background-color: rgb(0, 165, 79);"> Normal ({{ preschooler.bmifa}})</td>
-                                                                {% elif preschooler.bmifa >= -3.0 and preschooler.bmifa <= -2.0 %}
-                                                                    <td style="background-color: rgb(255, 241, 2);"> Wasted ({{ preschooler.bmifa }})</td>
-                                                                {% else %}
-                                                                    <td style="background-color: rgb(238, 29, 35);"> Severely Wasted ({{preschooler.bmifa }})</td>
-                                                                {% endif %}                                   
-                                                            </tr>
-                                                            {% endfor %}
-                                                        </tbody> -->
                                                     </table>
                                                 </div>
                                             </div>
@@ -706,7 +679,6 @@
 <script>
     document.getElementById("data_count").max = new Date(new Date().getTime() - new Date().getTimezoneOffset() * 60000).toISOString().split("T")[0];
 
-
     var t = $('#NutStat_history').DataTable({
         dom: 'frtip',
         aoColumnDefs: [{
@@ -723,6 +695,25 @@
             this.data(i++);
         });}).draw();
 </script>
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+{% if messages %}
+    {% for message in messages %}
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+            <script>
+                Swal.fire({
+                    icon: 'warning',
+                    title: 'INVALID DATE MEASURED INPUT',
+                    text: '{{message}}',
+                    confirmButtonText: "Okay",
+                    confirmButtonColor: '#EF3A25',
+                });
+            </script>
+        {% endif %}
+    {% endfor %}
+{% endif %}
 
 
 {% endblock %}
