--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -165,7 +165,7 @@ tbody tr:nth-of-type(even) {
   #navText{
     display: block;
     color: white;
-    text-align: center;
+    text-align: start;
     padding: 5px;
   }
 
@@ -185,15 +185,14 @@ tbody tr:nth-of-type(even) {
   }
   .menu{
     display:none;
-    background-color: #188045f9;
-    top:0;
+    background-color: #358658f9;
+    top:85px;
     left:0;
     position:fixed;
     flex-direction: column;
     justify-content: start;
     align-items:center;
     padding: 10%;
-    margin-top: 12vh;
     height: 100vh;
     width: 100vw;
     z-index: 1000;
